--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -11,23 +11,26 @@ on:
        - master
 
 jobs:
-  flake8:
+  flake8: # This job runs flake8 to check code style
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # Use the latest Ubuntu runner
 
-    steps:
-    - uses: actions/checkout@v4
+    steps: # Steps represent a sequence of tasks that will be executed as part of the job
+    - uses: actions/checkout@v4 # Check out the repository code
 
-    - name: Set up Python 3.13
+    # Set up Python 3.13 environment
+    - name: Set up Python 3.13 
       uses: actions/setup-python@v5
       with:
         python-version: "3.13"
 
+    # Install dependencies
     - name: Install dependencies
       run: |
         pip install --upgrade pip
         pip install flake8
 
+    # Run flake8
     - name: Lint with flake8
       run: |
         flake8 .
